<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/license_a_mod_1_title"
            />

        <TextView
            android:id="@+id/para_1"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/license_a_mod_1_para_1"
            />

        <LinearLayout
            android:id="@+id/bullet_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/bullet_point" />

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_a_mod_1_bullet_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/bullet_point" />

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_a_mod_1_bullet_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/bullet_point" />

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_a_mod_1_bullet_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/bullet_point" />

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_a_mod_1_bullet_4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/bullet_point" />

                <TextView
                    style="@style/ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_a_mod_1_bullet_1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_left_arrow_gray"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_right_arrow_green"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>
